--- a/buglog.client/src/assets/scss/_variables.scss
+++ b/buglog.client/src/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
 $body-bg: #f2f2f2;
-$primary: #3BA5DC;
+$primary: #21739c;
 $secondary: #FF3697;
-$danger: #EB5757;
-$success: #27AE60;
+$danger: #b62a2a;
+$success: #0c7036;
 $warning: #FF7F50;
 $info: #00C9BD;
 $dark: #313130;
